# routes/reviews.js
@@ -4,7 +4,11 @@ const controller = require('../controllers/reviewsController');
 
 // CRUD Reseñas
 router.post('/', controller.createReview);
-//router.get('/filter', controller.filterReviews);
+
+router.get('/filter', controller.filterReviews);
+//router.get('/recent', controller.getRecentReviews);
+router.get('/stats', controller.getStats);
+
 router.get('/', controller.filterReviews);
 router.get('/:id', controller.getReview);
 router.put('/:id', controller.updateReview);
